crates/cribo/tests/snapshots/ruff_lint_results@init_reexports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/init_reexports/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [
        "Line 5: unused-import - `os` imported but unused",
    ],
    total_violations: 1,
}
