crates/cribo/tests/snapshots/ruff_lint_results@metaclass_forward_ref_renamed.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_metaclass_forward_ref_renamed/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [],
    total_violations: 0,
}
