crates/cribo/tests/snapshots/ruff_lint_results@metaclass_with_wildcard_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/metaclass_with_wildcard_imports/main.py
---
RuffLintResults {
    f401: [],
    f404: [],
    other: [],
    total: 0,
}
